--- a/src/pages/crossposting/crossposting.pug
+++ b/src/pages/crossposting/crossposting.pug
@@ -35,12 +35,16 @@ block content
         h3.modal__title
         p.modal__text
         div.modal__icons
-      button.button.button_stretchable.button_beautiful
+        button.button.button_stretchable.button_beautiful
 
-  template#modal-item
+  template#modalItem
     div.modal-item.modal__item
       input.input
       button.button(type="button")
+
+  template#modalIcon
+    div.modal__icon
+      img
 
 
   div.crossposting
