--- a/src/pages/profile/profile.pug
+++ b/src/pages/profile/profile.pug
@@ -4,10 +4,10 @@ block variables
 	- let title = "Личный кабинет"
 
 block styles
-	link(rel="stylesheet" href="profile.css")
+	link(rel="stylesheet" href="css/profile.css")
 
 block scripts
-	script(src="profile.js" defer)
+	script(src="js/profile.js" defer)
 
 block content
 	div.profile
