--- a/src/pages/tariffs/tariffs.pug
+++ b/src/pages/tariffs/tariffs.pug
@@ -4,10 +4,10 @@ block variables
   - let title = "Тарифы"
 
 block scripts
-  script(src="tariffs.js" defer)
+  script(src="js/tariffs.js" defer)
 
 block styles
-  link(rel="stylesheet", href="tariffs.css")
+  link(rel="stylesheet", href="css/tariffs.css")
 
 block mixins
   include ../../blocks/radio-btn/radio-btn
