--- a/src/blocks/social-network-list/social-network-list.pug
+++ b/src/blocks/social-network-list/social-network-list.pug
@@ -2,18 +2,18 @@ include ../../blocks/custom-btn/custom-btn.pug
 
 ul.social-network-list
   li.social-network-list__item
-    +custom-btn(class="custom-btn__img_inst" alt="instagram" name="network" value="instagram" form="post")
+    +custom-btn(class="custom-btn__img_inst" name="network" value="instagram" form="post")
   li.social-network-list__item
-    +custom-btn(class="custom-btn__img_vk", alt="vk" name="network" value="vk" form="post")
+    +custom-btn(class="custom-btn__img_vk", name="network" value="vk" form="post")
   li.social-network-list__item
-    +custom-btn(class="custom-btn__img_ytb", alt="youtube" name="network" value="youtube" form="post")
+    +custom-btn(class="custom-btn__img_ytb", name="network" value="youtube" form="post")
   li.social-network-list__item
-    +custom-btn(class="custom-btn__img_twt", alt="twitter" name="network" value="twitter" form="post")
+    +custom-btn(class="custom-btn__img_twt", name="network" value="twitter" form="post")
   li.social-network-list__item
-    +custom-btn(class="custom-btn__img_fb", alt="facebook" name="network" value="facebook" form="post")
+    +custom-btn(class="custom-btn__img_fb", name="network" value="facebook" form="post")
   li.social-network-list__item
-    +custom-btn(class="custom-btn__img_tik-tok", alt="tik-tok" name="network" value="tik-tok" form="post")
+    +custom-btn(class="custom-btn__img_tik-tok", name="network" value="tik-tok" form="post")
   li.social-network-list__item
-    +custom-btn(class="custom-btn__img_tg", alt="telegram" name="network" value="telegram" form="post")
+    +custom-btn(class="custom-btn__img_tg", name="network" value="telegram" form="post")
   li.social-network-list__item
-    +custom-btn(class="custom-btn__img_p", alt="p" name="network" value="p" form="post")
+    +custom-btn(class="custom-btn__img_p", name="network" value="p" form="post")
