--- a/src/global-styles/fonts/fonts.scss
+++ b/src/global-styles/fonts/fonts.scss
@@ -1,7 +1,9 @@
 @font-face {
   font-family: Inter;
   src:local(Inter),
-      url("../fonts/Inter-Regular.ttf");
+      url('../fonts/inter-regular-webfont.woff2') format('woff2'),
+      url('../fonts/inter-regular-webfont.woff') format('woff'),
+      url("../fonts/Inter-Regular.ttf") format("truetype");
   font-display: swap;
   font-style: normal;
   font-weight: 400;
@@ -11,7 +13,9 @@
 @font-face {
   font-family: Inter;
   src:local(Inter),
-      url("../fonts/Inter-Medium.ttf");
+      url('../fonts/inter-medium-webfont.woff2') format('woff2'),
+      url('../fonts/inter-medium-webfont.woff') format('woff'),
+      url("../fonts/Inter-Medium.ttf") format("truetype");
   font-display: swap;
   font-style: normal;
   font-weight: 500;
@@ -21,7 +25,9 @@
 @font-face {
   font-family: Inter;
   src:local(Inter),
-      url("../fonts/Inter-SemiBold.ttf");
+      url('../fonts/inter-semibold-webfont.woff2') format('woff2'),
+      url('../fonts/inter-semibold-webfont.woff') format('woff'),
+      url("../fonts/Inter-SemiBold.ttf") format("truetype");
   font-display: swap;
   font-style: normal;
   font-weight: 600;
@@ -31,7 +37,9 @@
 @font-face {
   font-family: Inter;
   src:local(Inter),
-      url("../fonts/Inter-Bold.ttf");
+      url('../fonts/inter-bold-webfont.woff2') format('woff2'),
+      url('../fonts/inter-bold-webfont.woff') format('woff'),
+      url("../fonts/Inter-Bold.ttf") format("truetype");
   font-display: swap;
   font-style: normal;
   font-weight: 700;
