--- a/src/layouts/layout.pug
+++ b/src/layouts/layout.pug
@@ -4,9 +4,9 @@ html(lang="ru")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    
+    link(rel="icon" href="images/favicon.ico")
     block seo
-      meta(name="description" content="")
+      meta(name="description" content="Автоматическая публикация постов в разных соцсетях в запланированное время")
       meta(name="autor" content="")
 
     block styles
