--- a/src/blocks/side-bar/side-bar.pug
+++ b/src/blocks/side-bar/side-bar.pug
@@ -13,15 +13,15 @@ div.side-bar
     li.side-bar__item
       +menu-item("Кросспостинг", "crossposting.html", "Публикуйте контент в несколько соцсетей сразу")(class= title === "Кросспостинг" ? "menu-item_active" : "")
     li.side-bar__item
-      +menu-item("Мой сайт", "../stosite.html", "Создайте свой сайт-визитку за несколько кликов")(class= title === "Мой сайт" ? "menu-item_active" : "")
+      +menu-item("Мой сайт", "404.html", "Создайте свой сайт-визитку за несколько кликов")(class= title === "Мой сайт" ? "menu-item_active" : "")
     li.side-bar__item
-      +menu-item("Магазин", "store.html", "Создайте товары прямо на сервисе и продавайте их через сайт")(class= title === "Магазин" ? "menu-item_active" : "")
+      +menu-item("Магазин", "404.html", "Создайте товары прямо на сервисе и продавайте их через сайт")(class= title === "Магазин" ? "menu-item_active" : "")
     li.side-bar__item
-      +menu-item("Аналитика", "analytics.html")(class= title === "Аналитика" ? "menu-item_active" : "")
+      +menu-item("Аналитика", "404.html")(class= title === "Аналитика" ? "menu-item_active" : "")
     li.side-bar__item
-      +menu-item("Дополнительно", "additionally.html")(class= title === "Дополнительно" ? "menu-item_active" : "")
+      +menu-item("Дополнительно", "404.html")(class= title === "Дополнительно" ? "menu-item_active" : "")
     li.side-bar__item
-      +menu-item("Уведомления", "notifications.html")(class= title === "Уведомления" ? "menu-item_active" : "")
+      +menu-item("Уведомления", "404.html")(class= title === "Уведомления" ? "menu-item_active" : "")
         span.side-bar__notify 2
     li.side-bar__item
       +menu-item("Трифы", "tariffs.html")(class= title === "Тарифы" ? "menu-item_active" : "")
