--- a/src/pages/crossposting/modal.scss
+++ b/src/pages/crossposting/modal.scss
@@ -2,3 +2,6 @@
 @import "src/blocks/mask/mask";
 @import "src/blocks/modal/modal";
 @import "src/blocks/button/_stretchable";
+@import "src/blocks/input/input";
+@import "src/blocks/button/_white";
+@import "src/blocks/modal-item/modal-item";
