--- a/src/blocks/modal/modal.scss
+++ b/src/blocks/modal/modal.scss
@@ -14,6 +14,14 @@
 		font-weight: 700;
 		font-size: 3rem;
 		line-height: 1.2;
+
+		@media (max-width: 450px) {
+			font-size: 2.3rem;
+		}
+
+		@media (max-width: 370px) {
+			font-size: 1.8rem;
+		}
 	}
 
 	&__text {
@@ -58,5 +66,13 @@
 
 	.modal__item {
 		margin-bottom: 1.5rem;
+	}
+
+
+	.button {
+
+		@media (max-width: 400px) {
+			padding: 0.5rem;
+		}
 	}
 }
