Починил ссылку на фото

--- a/src/pages/profile/profile.pug
+++ b/src/pages/profile/profile.pug
@@ -17,7 +17,7 @@ block content
 				h3.profile__form-title Профиль
 				div.profile__person
 					div.profile__ava
-						img(src="../images/bender.jpg" alt="Аватар")
+						img(src="images/bender.jpg" alt="Аватар")
 					span.profile__name Bender
 				div.profile__wrap
 					input.input#soc
